syntax = "proto3";

package calculator;

option go_package ="calculator/calcpb";

message CalcRequest{
    int64 x = 1;
    int64 y = 2;
}

message CalcResponse{
    int64 result = 1;
}

message PrimeNumberDecompositionRequest{
    float number = 1;
}

message PrimeNumberDecompositionResponse{
    float factor = 1;
}

message CalcAverageRequest{
    int64 number = 1;
}

message CalcAverageResponse{
    float average = 1;
}

message FindmaxRequest{
    int32 number = 1;
}

message FindMaxResponse{
    double max = 1;
}

message SquareRootRequest {
    int64 number = 1;
}

message SquareRootResponse{
    double number_root = 1;
}

service CalcService {
    rpc Sum (CalcRequest) returns (CalcResponse);
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
    rpc CalcAverage(stream CalcAverageRequest) returns (CalcAverageResponse);
    rpc FindMax(stream FindmaxRequest) returns (stream FindMaxResponse);
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse);
}